--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -56,8 +56,14 @@ p {
 }  
 
 /* Services Section */
-
 .services{
+    width: 75%;
+    margin-left: 20px;
+    float:left;
+
+}
+
+.services-item{
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -77,11 +83,12 @@ p {
 
 .img-left{
     float: left;
+    margin-right: 25px;
 }
 
 .img-right{
     float: right;
-    margin-right: 25px;
+    margin-left: 25px;
 }
 
 .services p{
@@ -89,10 +96,10 @@ p {
     overflow: auto
 }
 
+/* Benefits Section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    clear: both;
     float: right;
     width: 20%;
     height: 100%;
@@ -100,64 +107,20 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-item {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-item h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-item img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-
-
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
 }
 
 .content {
